# HighPerformanceTradingGateway

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-run.sh  main.cpp
.github/workflows/: build.yml
examples/: README.md  fix_client.cpp  setup_examples.sh
examples/data/: sample_orders.txt
include/: FixMessageHandler.hpp  Logger.hpp  MarketDataProcessor.hpp  MessageQueue.hpp  NetworkClient.hpp  NetworkServer.hpp  NetworkTypes.hpp  OrderManager.hpp  ThreadPool.hpp
src/: FixMessageHandler.cpp  Logger.cpp  MarketDataProcessor.cpp  NetworkClient.cpp  NetworkServer.cpp  OrderManager.cpp  ThreadPool.cpp
test/: FixMessageHandlerTest.cpp  LoggerTest.cpp  MarketDataProcessorTest.cpp  OrderManagerTest.cpp
